Update: Adding RecyclerView method to update the recyclerView from arrayList<Entrenador>

--- a/01-android/app/src/main/AndroidManifest.xml
+++ b/01-android/app/src/main/AndroidManifest.xml
@@ -26,12 +26,18 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+<!--        Andoird.exported="true" para seas visiables-->
         <activity
             android:name=".CIntentExplicitoParametros"
-            android:exported="false">
-            <meta-data
+            android:exported="true">
+            <!--<meta-data
                 android:name="android.app.lib_name"
-                android:value="" />
+                android:value="" />-->
+            <intent-filter>
+                <action android:name="android.intent.action.SEND"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="text/plain"/>
+            </intent-filter>
         </activity>
         <activity
             android:name=".BListView"
