--- a/01-android/app/src/main/AndroidManifest.xml
+++ b/01-android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,32 @@
         android:theme="@style/Theme.Koapplication"
         tools:targetApi="31">
         <activity
+            android:name=".HGoogleMapsActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <!--
+             TODO: Before you run your application, you need a Google Maps API key.
+
+             To get one, follow the directions here:
+
+                https://developers.google.com/maps/documentation/android-sdk/get-api-key
+
+             Once you have your API key (it starts with "AIza"), define a new property in your
+             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
+             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAjGhVjSaQXgaj8TsulOTTQTWf_Vutmel0" />
+
+        <activity
+            android:name=".HGoogleMaps"
+            android:exported="false"
+            android:label="@string/title_activity_hgoogle_maps" />
+        <activity
             android:name=".GRecyclerView"
             android:exported="false">
             <meta-data
@@ -25,18 +51,22 @@
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-        </activity>
-<!--        Andoird.exported="true" para seas visiables-->
+        </activity> <!-- Andoird.exported="true" para seas visiables -->
         <activity
             android:name=".CIntentExplicitoParametros"
             android:exported="true">
-            <!--<meta-data
+
+            <!--
+                <meta-data
                 android:name="android.app.lib_name"
-                android:value="" />-->
+                android:value="" />
+            -->
             <intent-filter>
-                <action android:name="android.intent.action.SEND"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <data android:mimeType="text/plain"/>
+                <action android:name="android.intent.action.SEND" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="text/plain" />
             </intent-filter>
         </activity>
         <activity
